# wrenbind17

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  Doxyfile  LICENSE  README.md  appveyor.yml  coverage.sh  en.search-data.min.04aabf2427f2b533095d66932e5deec3adb821b42ec7417c6163073a3b9d0a63.js  en.search-data.min.31cdc38a8c5faa90a4138364d653a7823bf877e9fd6c11ed1368c3fb24fcec18.js  en.search-data.min.358a4bc9d8dcda498ca76464432fe4228e95d93866c9379f2a7bafe901213410.js  en.search-data.min.a986ed55b57d533532f642fc23eff5a5e485788fc5d1ca4da704bdc52d595f6a.js  en.search-data.min.b056fe85df46f64a788040b37dbc36e8d13fb1da43a5f0463cb2120216e185b7.js  en.search-data.min.bace324cdb089747597d340a23ce88256e820ce39d36de79b3436178c032d75a.js  en.search-data.min.e15a1d774a18b961b2fb561112adb6af97971f9505a245ae44d87ecbb1a70f44.js  en.search.min.0a7a3a9aa866ceb5f9d0342ad615d395091f74e3be96bc1555db73b7876d3085.js  en.search.min.311c7ad72a98b714a4deab316878c951b8d2fb56011aa53e4fa3c81cc7707759.js  en.search.min.4c4b9dc154e48a349cd075ed787ef435b66ace026b12dd7ff903db6321b02ad9.js  en.search.min.63660427ae08eac99a6d62a9c2e9318f90847978ad7d7bb0f69beabe74656043.js  en.search.min.ac4c7935c74ca57019625665f34ce3f63baab2bd358ea4f00f5105d9a9163a5c.js  en.search.min.d821bc4671e09f70c11205fdbb12a428d1e7a206559339bc157cbdc6081e40ca.js  en.search.min.fb6c94a8bafbbce8462efda517ac26e7e51ef11540811e551c383e49d4235e1e.js  index.html  index.xml  manifest.json  sitemap.xml  wren.supp
.circleci/: config.yml
.github/workflows/: build.yml
.vuepress/: config.js
assets/css/: 0.styles.00526f3e.css  0.styles.9185cbf8.css  0.styles.f8145da2.css
assets/js/: 10.0b58e701.js  10.2bbf2011.js  10.336ff8d4.js  10.414c42e1.js  10.448485d5.js  10.47b05ef9.js  10.4e1d344b.js  10.9503ba54.js  10.a74681a8.js  10.b8157c4a.js  10.d6c581e9.js  10.d8b15309.js  10.e3174391.js  10.fdc0475a.js  100.09cfe8d3.js  100.159b5efd.js  100.15adc92c.js  100.26f0199b.js  100.37a888db.js  100.45297f84.js  100.4f36887d.js  100.533ba9a7.js  100.5d30af2d.js  100.66df1afd.js  100.83164e9d.js  100.b1696fb4.js  100.c43ce6c1.js  100.d0564e84.js  100.d8916de7.js  100.ecf0087d.js  101.00845638.js  101.0da247ae.js  101.624d208d.js  101.63c1accb.js  101.6c4e73c8.js  101.6dfa909f.js  101.75b3dcc3.js  101.a6686b05.js  101.b66f178c.js  101.ba797cd5.js  (+2323 more)
categories/: index.html  index.xml
classes/: index.html  index.xml
classes/classwrenbind17_1_1_abstract_map_bindings/: index.html
classes/classwrenbind17_1_1_any/: index.html
classes/classwrenbind17_1_1_any_1_1_content/: index.html
classes/classwrenbind17_1_1_any_1_1_data/: index.html
classes/classwrenbind17_1_1_bad_cast/: index.html
classes/classwrenbind17_1_1_compile_error/: index.html
classes/classwrenbind17_1_1_exception/: index.html
classes/classwrenbind17_1_1_foreign_klass/: index.html
classes/classwrenbind17_1_1_foreign_klass_impl/: index.html
classes/classwrenbind17_1_1_foreign_method/: index.html
classes/classwrenbind17_1_1_foreign_method_impl/: index.html
classes/classwrenbind17_1_1_foreign_module/: index.html
classes/classwrenbind17_1_1_foreign_prop/: index.html
classes/classwrenbind17_1_1_foreign_prop_impl/: index.html
classes/classwrenbind17_1_1_handle/: index.html
classes/classwrenbind17_1_1_map/: index.html
classes/classwrenbind17_1_1_method/: index.html
classes/classwrenbind17_1_1_not_found/: index.html
classes/classwrenbind17_1_1_return_value/: index.html
classes/classwrenbind17_1_1_runtime_error/: index.html
classes/classwrenbind17_1_1_std_list_bindings/: index.html
classes/classwrenbind17_1_1_std_vector_bindings/: index.html
classes/classwrenbind17_1_1_std_vector_helper/: index.html
classes/classwrenbind17_1_1_std_vector_helper_3_01_t_00_01typename_01std_1_1enable__if_3_01detail_1_1is_9ed14e99eb1e8a4cf5463842b9d26037/: index.html
classes/classwrenbind17_1_1_std_vector_helper_3_01_t_00_01typename_01std_1_1enable__if_3_9detail_1_1is__00e67679ae85136e10c5db88faa3df1f/: index.html
classes/classwrenbind17_1_1_v_m/: index.html
classes/classwrenbind17_1_1_v_m_1_1_data/: index.html
classes/classwrenbind17_1_1_variable/: index.html
classes/structwrenbind17_1_1_foreign_klass_impl_1_1_foreign_getter_details/: index.html
classes/structwrenbind17_1_1_foreign_klass_impl_1_1_foreign_getter_details_3_01_r_07_t_1_1_5_08_07_08_00_01_fn_01_4/: index.html
classes/structwrenbind17_1_1_foreign_klass_impl_1_1_foreign_getter_details_3_01_r_07_t_1_1_5_08_07_08_01const_00_01_fn_01_4/: index.html
classes/structwrenbind17_1_1_foreign_klass_impl_1_1_foreign_getter_ext_details/: index.html
docs/: bind_cpp_class.html  bind_cpp_class.md  call_wren.html  call_wren.md  call_wren_return_cpp.html  call_wren_return_cpp.md  callbacks.html  callbacks.md  config.toml  customize.html  customize.md  foreign_inheritance.html  foreign_inheritance.md  hello_world.html  hello_world.md  liveness_garbage.html  liveness_garbage.md  modularity.html  modularity.md  tutorial.html  tutorial.md  tutorial_abstract.html  tutorial_abstract.md  tutorial_binding.html  tutorial_binding.md  tutorial_buildin.html  tutorial_buildin.md  tutorial_building.html  tutorial_call_wren.html  tutorial_call_wren.md  tutorial_callbacks_fn.html  tutorial_callbacks_fn.md  tutorial_customize.html  tutorial_customize.md  tutorial_exceptions.html  tutorial_exceptions.md  tutorial_executing_code.html  tutorial_executing_code.md  tutorial_ext_functions.html  tutorial_ext_functions.md  (+24 more)
files/: index.html  index.xml
include/: wrenbind17.hpp
menu/: index.html
modules/: FindCatch2.cmake  FindWren.cmake  index.html  index.xml
namespaces/: index.html  index.xml
tags/: index.html  index.xml
tests/: abstract.cpp  any.cpp  callbacks.cpp  can_compile.cpp  classes.cpp  example.cpp  exceptions.cpp  fn.cpp  inheritance.cpp  lists.cpp  main.cpp  maps.cpp  noncopyable.cpp  operators.cpp  optional.cpp  pass_classes.cpp  path_resolve.cpp  props.cpp  return_classes.cpp  shared.cpp  slots.cpp  slots_classes.cpp  strings.cpp  variants.cpp
tutorial/: index.html  index.xml
(+337 files in other folders)
